Adjust padding for card date and change icon

--- a/themes/feuerwehr-hungen/scss/spectre/_cards.scss
+++ b/themes/feuerwehr-hungen/scss/spectre/_cards.scss
@@ -21,6 +21,10 @@
     flex: 1 1 auto;
   }
 
+  .card-subtitle {
+    padding-bottom: 4px;
+  }
+
   .card-image {
     padding-top: $layout-spacing-lg;
 
