--- a/themes/feuerwehr-hungen/templates/partials/blog/date.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/blog/date.html.twig
@@ -1,5 +1,5 @@
 <span class="blog-date">
     <time class="dt-published" datetime="{{ page.date|date('c') }}">
-        <i class="fa fa-calendar"></i> {{ page.date|date('d') }}. {{ 'GRAV.MONTHS_OF_THE_YEAR'|ta(page.date|date('n') - 1)}} {{page.date|date('Y') }}
+        <i class="fa-regular fa-calendar"></i> {{ page.date|date('d') }}. {{ 'GRAV.MONTHS_OF_THE_YEAR'|ta(page.date|date('n') - 1)}} {{page.date|date('Y') }}
     </time>
 </span>
