--- a/themes/feuerwehr-hungen/templates/partials/footer.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/footer.html.twig
@@ -4,7 +4,7 @@
     <section class="container {{ grid_size }}">
         <div class="columns">
             <div class="column col-5 col-md-12">
-                <p><a class="footer-anchor" href="https://grav.dev.ff-inheiden.de/kontakt/">Kontakt</a> | <a class="footer-anchor" href="https://grav.dev.ff-inheiden.de/impressum/">Impressum & Datenschutz</a></p>
+                <p><a class="footer-anchor" href="https://dev.ff-inheiden.de/kontakt/">Kontakt</a> | <a class="footer-anchor" href="https://dev.ff-inheiden.de/impressum/">Impressum & Datenschutz</a></p>
             </div>
             <div id="copyright-txt" class="column col-7 col-md-12">
                 <p>Copyright © 2024 | gemeinsames Projekt der Feuerwehr Inheiden. All rights reserved</p>
