Small fix for page behavior on phone

--- a/themes/feuerwehr-hungen/scss/fw-glight.scss
+++ b/themes/feuerwehr-hungen/scss/fw-glight.scss
@@ -180,6 +180,10 @@
   background: $fw-blue !important;
 }
 
+.glightbox-open {
+  height: auto;
+}
+
 .glightbox-clean .gslide-title {
   color: whitesmoke !important;
 }
