--- a/themes/feuerwehr-hungen/scss/theme/_mobile.scss
+++ b/themes/feuerwehr-hungen/scss/theme/_mobile.scss
@@ -1,17 +1,9 @@
-.mobile-container {
-  position: absolute;
-  //width: 100%;
-  //height: 100%;
-  top: 40%;
-  left: 0;
-  margin:  0 auto;
-  z-index: 2;
-}
+
 
 .mobile-logo {
   svg, img {
     height: 42px;
-    margin-top: .7rem;
+    margin-top: .1rem;
     margin-left: 1.4rem;
 
     path {
@@ -72,7 +64,7 @@
     }
 
     span {
-      background: $mobile-color-main;
+      background: whitesmoke;
       border: none;
       height: 4px;
       width: 100%;
@@ -110,83 +102,120 @@
     height: 100%;
 
   }
-  nav {
 
-    position: relative;
-    margin: 0 auto;
-    text-align: center;
-  }
 }
 
+
+
+
+/* Main menu positionning */
 .overlay-menu {
-  height: calc(100% - 90px);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  background: #FFF;
+  opacity: 0;
+  z-index: -1;
+  height: 100%;
   overflow-y: scroll;
+  visibility: hidden;
+  transition: all .375s;
+}
 
-  & > .tree {
-    text-align: left;
-  }
+.overlay-menu.is-open {
+  opacity: 1;
+  z-index: 100;
+  visibility: visible;
 }
 
 
-.treemenu {
-
-  &.treemenu-root {
-    margin: 1rem;
-  }
-
-  li {
-    list-style: none;
-    margin: 0 0 1px;
-    padding: 5px 0;
-    line-height: 1.2rem;
-
-    background: rgba($gray-color-dark,0.1);
-
-    a {
-      display: block;
-      margin-left: 1.2rem;
-      font-size: 1rem;
-
-      &:hover, &:focus, &.active {
-        color: $primary-color-light !important;
-        text-decoration: none;
-      }
-    }
-  }
-
-  ul {
-    margin: 0 0 0 1rem;
-  }
-
-  .toggler {
-    cursor: pointer;
-    vertical-align: top;
-    font-size: 1.1rem;
-    line-height: 1rem;
-    padding-left: 5px;
-    float: left;
-
-    &:before {
-      display: inline-block; margin-right: 2pt;
-    }
-  }
-
-  li.tree-empty  > .toggler {
-    opacity: 0.3; cursor: default;
-
-    &:before {
-      content: "\2022";
-    }
-  }
-
-  li.tree-closed > .toggler:before {
-    content: "+";
-  }
-
-  li.tree-opened > .toggler:before {
-    content: "\2212";
-  }
+/* Blue band effect */
+.overlay-menu::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: -15px;
+  background: #063480;
+  transform-origin: 0 0;
+  transform: skew(-14deg) translateX(-120%);
+  transition: all .275s .1s;
 }
+
+.overlay-menu.is-open::before {
+  transform: skew(-14deg) translateX(0);
+}
+
+/* Skewing effect on menu links */
+.overlay-menu ul {
+  display: inline-flex;
+  flex-direction: column;
+  height: 93%; /* Should be 100%, but we have a notice message :D */
+  align-items: flex-end;
+  justify-content: center;
+  transform: translateX(-18%) skew(-16deg);
+}
+
+.overlay-menu li {
+  display: block;
+  margin: .5rem 0;
+  text-align: right;
+  transform: skew(16deg);
+}
+
+/* Apparition effect on links */
+.overlay-menu a {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.overlay-menu.is-open a {
+  opacity: 1;
+  transform: translateY(0);
+}
+.overlay-menu li:nth-child(1) a {
+  transition: all 275ms 175ms
+}
+.overlay-menu li:nth-child(2) a {
+  transition: all 275ms 225ms
+}
+.overlay-menu li:nth-child(3) a {
+  transition: all 275ms 275ms
+}
+.overlay-menu li:nth-child(4) a {
+  transition: all 275ms 325ms
+}
+.overlay-menu li:nth-child(5) a {
+  transition: all 275ms 375ms
+}
+
+/* Decoration */
+.overlay-menu ul,
+.overlay-menu li {
+  list-style: none;
+  padding: 0;
+}
+.overlay-menu a {
+  display: block;
+  padding: 12px 0;
+  color: whitesmoke;
+  font-size: 2em;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
+
+
+.button_container:focus {
+  outline: none;
+}
+
+
 
 .mobile-nav-open {
   overflow-y: hidden;
