--- a/themes/feuerwehr-hungen/templates/partials/base.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/base.html.twig
@@ -98,7 +98,7 @@
             <div class="mobile-logo">
                 {% include 'partials/logo.html.twig' with {mobile: true} %}
             </div>
-            <nav class="overlay-menu">
+            <nav class="overlay-menu" id="main-nav">
                 {% include 'partials/navigation.html.twig' with {tree: true} %}
             </nav>
         </div>
