Update entry list

--- a/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
@@ -21,7 +21,12 @@
         'Robin',   // Index 7
         'Dominik', // Index 8
         'Oliver',  // Index 9
-        'Pascal'   // Index 10
+        'Pascal',   // Index 10
+        'Alex',
+        'Bianca',
+        'Gerrit',
+        'Gerald',
+        'Matheo'
     ];
 
     const lowerCaseVornamenArray = vornamenArray.map(name => name.toLowerCase());
