--- a/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
@@ -11,21 +11,21 @@
 
 
     const vornamenArray = [
-        'Bastian', // Index 0
-        'Jan',     // Index 1
-        'Florian', // Index 2
-        'Alexander', // Index 3
-        'Johannes', // Index 4
-        'Patrick', // Index 5
-        'Jonas',   // Index 6
-        'Robin',   // Index 7
-        'Dominik', // Index 8
-        'Oliver',  // Index 9
-        'Pascal',   // Index 10
-        'Alex',
+        'Patrick',
         'Bianca',
+        'Dominik',
+        'Bastian',
+        'Jan',
+        'Florian',
+        'Alexander',
+        'Johannes',
         'Gerrit',
         'Gerald',
+        'Jonas',
+        'Robin',
+        'Oliver',
+        'Pascal',
+        'Alex',
         'Matheo'
     ];
 
