Adjust glightbox styling

--- a/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
@@ -48,6 +48,8 @@
             $(".carousel").addClass("mobileView");
         }
 
+        $("<i class='fa-solid fa-user'></i>")
+
         var param = GetURLParameter('person')
 
         if(param !== null && param !== undefined) {
@@ -188,8 +190,15 @@
                                     id="{{ entry.vorname }}"
                                     href="user/images/vorstellung-images/{{ entry.picked_image }}"
                                     class="glightbox2"
-                                    data-title="{{ entry.vorname }}"
-                                    data-description="<h5 class='descText'><p><strong>Funktion:</strong> {{ entry.funktion|e }}</p></h5><h5 class='descText'><span><strong>Beruf:</strong> {{ entry.beruf|e }}</span></h5><h5 class='descText'><span><strong>Bei der Feuerwehr seit:</strong> {{ entry.datum|e }}</span></h5><h5 class='descText'><span><strong>Über Mich:</strong> {{ entry.beschreibung|e }}</span></h5>"
+                                    data-title="<i class='fa-solid fa-user'></i> <strong>{{ entry.vorname }} </strong>"
+                                    data-description="<h5 class='descText'><p><strong>Funktion:</strong> {{ entry.funktion|e }}</p></h5><h5 class='descText'><span>
+                                    {% if entry.beruf %}<strong>Beruf:</strong> {{ entry.beruf|e }}
+                                    </span></h5>
+                                    {% endif %}
+                                    <h5 class='descText'><span><strong>Bei der Feuerwehr seit:</strong> {{ entry.datum|e }}</span></h5>
+                                    {% if entry.beschreibung %}
+                                    <h5 class='descText'><span><strong>Über Mich:</strong> {{ entry.beschreibung|e }}</span></h5>
+                                    {% endif %}"
                                     data-desc-position="right"
                                     data-type="image"
                                     data-effect="fade"
