Add arrow for mobile carousel

--- a/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
@@ -82,7 +82,7 @@
                 pageDots: false,
                 imagesLoaded: true,
                 resizable: false,
-                prevNextButtons: false,
+                prevNextButtons: true,
                 percentPosition: false,
                 groupCells: 0
             });
