--- a/themes/feuerwehr-hungen/scss/theme.scss
+++ b/themes/feuerwehr-hungen/scss/theme.scss
@@ -24,6 +24,7 @@
 @import "fw-sidebar";
 @import "fw-logo";
 @import "fw-glight";
+@import "profiles";
 
 .modular-features .feature-icon h6 {
   z-index: 0 !important;
