--- a/themes/feuerwehr-hungen/templates/partials/blog-list-item.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/blog-list-item.html.twig
@@ -21,7 +21,7 @@
         {% endif %}
     </div>
     <div class="card-footer">
-	<a href="{{ page.url }}">Weiterlesen</a>
+	<a class="button-def button--mimas" href="{{ page.url }}">Weiterlesen</a>
         {% include 'partials/blog/taxonomy.html.twig' %}
     </div>
 </div>
