--- a/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
@@ -24,7 +24,7 @@
 
         <div class="columns">
             {% for profile in page.header.profiles %}
-            <div class="column col-6 col-md-6 col-sm-12">
+            <div class="column profile-column col-6 col-md-6 col-sm-12">
                 <div class="profile-card">
                     <div class="ds-top"></div>
                     <div class="avatar-holder">
