--- a/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
@@ -41,7 +41,7 @@
                     </button>
                     <div class="ds-info">
                         <div class="ds pens">
-                            <h6 title="Email"><i class="fa-solid fa-envelope"></i>
+                            <h6 title="Email"><i class="fa-solid fa-envelope beforI"></i>
                                 <div class="tooltip">
                                     <button class="btn">
                                         {{ profile.email }} <a onclick="copyToClipboard('{{ profile.email }}')"><i class="fa-regular fa-copy"></i><span class="tooltiptext" id="{{ profile.email }}-tooltip">Copy to clipboard</span></a>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="ds-info">
                         <div class="ds projects">
-                            <h6 title="Telefon"><i class="fa-solid fa-phone"></i>
+                            <h6 title="Telefon"><i class="fa-solid fa-phone beforI"></i>
                                 <button class="btn">{{ profile.tel }} <a onclick="copyToClipboard('{{ profile.email }}')"><i class="fa-regular fa-copy"></i></a>
                                 </button>
                             </h6>
