--- a/themes/feuerwehr-hungen/scss/profiles.scss
+++ b/themes/feuerwehr-hungen/scss/profiles.scss
@@ -27,8 +27,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: 300px;
-  height: 410px;
+  width: 310px;
+  height: 420px;
   border-radius: 10px;
   box-shadow: 0 10px 25px 5px rgba(0, 0, 0, 0.2);
   background: whitesmoke;
@@ -39,7 +39,7 @@
     top: 0;
     right: 0;
     left: 0;
-    width: 300px;
+    width: 350px;
     height: 90px;
     background: $fw-blue;
     animation: dsTop 1.5s;
@@ -137,7 +137,7 @@
   .ds-info {
     position: relative;
     margin: auto;
-    margin-left: 20px;
+    //margin-left: 20px;
     //top: -40px;
     bottom: 0;
     right: 0;
@@ -148,6 +148,7 @@
     .pens, .projects, .posts {
       position: relative;
       left: -300px;
+      margin-left: 15px;
       //width: calc(250px / 3);
       text-align: center;
       color: $fw-text-underline;
@@ -163,8 +164,8 @@
         }
       }
       .beforI {
-        -ms-transform: translate(-40%, 10%);
-        transform: translate(-40%, 10%);
+        -ms-transform: translate(-10%, 20%);
+        transform: translate(-10%, 20%);
         font-size: 25px;
       }
     }
