Add markdown option for profiles

--- a/themes/feuerwehr-hungen/scss/profiles.scss
+++ b/themes/feuerwehr-hungen/scss/profiles.scss
@@ -21,6 +21,15 @@
   background: #f8f9fa;
 }
 
+.columns.left {
+  flex-direction: row-reverse;
+  margin: auto;
+}
+
+.text-column {
+  padding: 0 25px;
+}
+
 .profile-card {
   margin: auto;
   top: 0;
