--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -45,5 +45,5 @@ form .form-column {
   }
 }
 .form-label span.required {
-  line-height: 0; // may not be needed. on one of my forms, this fixes a vertical misalignment between the two side-by-side fields
+  line-height: 0;
 }
